--- a/travel-app/src/App.css
+++ b/travel-app/src/App.css
@@ -1,8 +1,16 @@
+/* Reset any styles that might be causing issues */
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .logo {
