--- a/travel-app/src/index.css
+++ b/travel-app/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Great+Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=South+Mind&display=swap');
 
 
 @tailwind base;
